# DESS

./: .gitignore  google_api_workflow.py  requirements.txt  run_rmp_pipeline.py
dess/: __init__.py  createopenaibatch.py  extract_departments_batch.py  llm.py
dess/batch_inference/: README.md  __init__.py  base.py  factory.py  gemini.py  openai.py  run_batch_inference.py  sample_batch_output.jsonl
dess/batch_inference/prompts/: default_department_extraction.txt
dess/llms/: gemini_llm.py  gpt_llm.py  llm_factory.py  openaibatchprocessor.py
rmp-experiment/: Cargo.toml  README.md  batch_mvp.rs  efficient_mvp.rs  export.py  mvp.rs  rmp.py
